# ASI

./: .env.example  .gitignore  README.md  environment.yml  instrukcja_spotkanie_1_student.md  pyproject.toml  setup.py  streamlit_app.py
api/: main.py  model_loader.py  schemas.py
conf/base/: catalog.yml  parameters.yml
conf/local/: credentials.example.yml
notebooks/: 01_eda.ipynb
src/asi_projekt/: pipeline_registry.py
src/asi_projekt/pipelines/automl/: nodes.py
src/asi_projekt/pipelines/data_processing/: nodes.py  pipeline.py
src/asi_projekt/pipelines/synthetic/: nodes.py
